# pcsc-project

./: .gitignore  CMakeLists.txt  README.md
exc/: ConvergenceException.cpp  ConvergenceException.hpp  DivBy0Exception.cpp  Exception.cpp  Exception.hpp
html/: _aitken___accelerator_8hpp_source.html  _bisection___solver_8hpp_source.html  _chord___solver_8hpp_source.html  _fixed___point___solver_8hpp_source.html  _n_l_e___solver_8hpp_source.html  _n_l_s___solver_8hpp_source.html  _newton___solver_8hpp_source.html  _newton___system___solver_8hpp_source.html  _solver_8hpp_source.html  annotated.html  class_bisection___solver-members.html  class_bisection___solver.html  class_chord___solver-members.html  class_chord___solver.html  class_fixed___point___solver-members.html  class_fixed___point___solver.html  class_n_l_e___solver-members.html  class_n_l_e___solver.html  class_n_l_s___solver-members.html  class_n_l_s___solver.html  class_newton___solver-members.html  class_newton___solver.html  class_newton___system___solver-members.html  class_newton___system___solver.html  class_solver-members.html  class_solver.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  pcsc_8hh_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js
src/: Aitken_Accelerator.cpp  Aitken_Accelerator.h  Aitken_Accelerator.hpp  Bisection_Solver.cpp  Bisection_Solver.hpp  Chord_Solver.cpp  Chord_Solver.hpp  Fixed_Point_Solver.cpp  Fixed_Point_Solver.hpp  NLE_Solver.cpp  NLE_Solver.hpp  NLS_Solver.cpp  NLS_Solver.hpp  Newton_Solver.cpp  Newton_Solver.hpp  Newton_System_Solver.cpp  Newton_System_Solver.hpp  Solver.cpp  Solver.hpp  Test_Aitken_Accelerator.cpp  Test_Aitken_Google.cpp  Test_Bisection_Solver.cpp  Test_Chord_Google.cpp  Test_Chord_Solver.cpp  Test_Newton_Google.cpp  Test_Newton_Solver.cpp  Test_Newton_System_Solver.cpp  main.cc  pcsc.cc  pcsc.hh
src/exc/: ConvergenceException.cpp  DivBy0Exception.cpp  DivBy0Exception.hpp  Exception.cpp  Exception.hpp  InitializationException.cpp  InitializationException.hpp
test/: Test_Aitken_Accelerator.cpp  Test_Aitken_Google.cpp  Test_Bisection_Google.cpp  Test_Bisection_Solver.cpp  Test_Chord_Google.cpp  Test_Chord_Solver.cpp  Test_Newton_Google.cpp  Test_Newton_Solver.cpp  Test_Newton_System_Google.cpp  Test_Newton_System_Solver.cpp  test.cc
